# redish

./: .gitignore  Command.hs  ConnectionHandler.hs  Interface.hs  Main.hs  Makefile  Network.hs  README.md  Redish.hs  RedishCmd.hs  RedishCore.hs  RedishImpl.hs  RedishNetwork.hs  Server.hs  Test.hs  Transactions.hs  redish.cabal  report.md  report.txt
executable/: Main.hs
test/: Test.hs
