name:                redish
version:             0.1.0.0
synopsis:            A simple, Redis-inspired, key-value store
license:             BSD3
license-file:        LICENSE
author:              Honza Pokorny
maintainer:          me@honza.ca
homepage:            https://github.com/honza/redish
category:            Database
build-type:          Simple
cabal-version:       >=1.8

library
    exposed-modules:
        Server
        Redish
    other-modules:
        RedishCore
    build-depends:   base, containers 

executable redish
  hs-source-dirs:    executable
  main-is:           Main.hs
  build-depends:     base, stm, redish, network, containers
  Ghc-Options:       -Wall -threaded -O2

Test-Suite test-redish
    type:           exitcode-stdio-1.0
    build-depends:  base, redish, containers, mtl, QuickCheck
    hs-source-dirs: test
    main-is:        Test.hs
